--- a/console-ui/pom.xml
+++ b/console-ui/pom.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
 
-    <parent>
-        <groupId>org.jline</groupId>
-        <artifactId>jline-parent</artifactId>
-        <version>${nisse.jgit.dynamicVersion}</version>
-    </parent>
+    <parent />
 
     <artifactId>jline-console-ui</artifactId>
     <name>JLine Console UI</name>
@@ -17,7 +12,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-builtins</artifactId>
         </dependency>
         <dependency>
