--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -9,15 +9,9 @@
     https://opensource.org/licenses/BSD-3-Clause
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.jline</groupId>
-        <artifactId>jline-parent</artifactId>
-        <version>${nisse.jgit.dynamicVersion}</version>
-    </parent>
+    <parent />
 
     <artifactId>jline-demo</artifactId>
     <name>JLine Demo</name>
@@ -28,7 +22,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-terminal-ffm</artifactId>
         </dependency>
         <dependency>
@@ -36,15 +29,12 @@
             <artifactId>jline-terminal-jni</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-terminal-jansi</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-terminal-jna</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-reader</artifactId>
         </dependency>
         <dependency>
@@ -52,7 +42,6 @@
             <artifactId>jline-builtins</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-console</artifactId>
         </dependency>
         <dependency>
@@ -68,11 +57,9 @@
             <artifactId>jline-remote-telnet</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-style</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jline</groupId>
             <artifactId>jline-groovy</artifactId>
         </dependency>
 
