--- a/jansi-core/pom.xml
+++ b/jansi-core/pom.xml
@@ -9,15 +9,9 @@
     https://opensource.org/licenses/BSD-3-Clause
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.jline</groupId>
-        <artifactId>jline-parent</artifactId>
-        <version>${nisse.jgit.dynamicVersion}</version>
-    </parent>
+    <parent />
 
     <artifactId>jansi-core</artifactId>
     <name>Jansi Core</name>
