--- a/console/pom.xml
+++ b/console/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.jline</groupId>
             <artifactId>jline-style</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-console-ui</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.googlecode.juniversalchardet</groupId>
@@ -63,7 +67,7 @@
                         <id>default-compile</id>
                         <configuration>
                             <compilerArgs>
-                                <arg>-Xlint:all,-options</arg>
+                                <arg>-Xlint:all,-options,-restricted</arg>
                                 <arg>-Werror</arg>
                             </compilerArgs>
                         </configuration>
