--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -150,6 +150,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -159,6 +160,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -168,6 +170,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -177,6 +180,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -186,6 +190,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -195,6 +200,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -204,6 +210,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -213,6 +220,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -222,6 +230,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -231,6 +240,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -240,6 +250,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -249,6 +260,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jline</groupId>
@@ -258,6 +270,7 @@
                                     <overWrite>false</overWrite>
                                     <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                     <includes>**/*.java</includes>
+                                    <excludes>**/module-info.java</excludes>
                                 </artifactItem>
 
                                 <!-- resources -->
