--- a/graal/pom.xml
+++ b/graal/pom.xml
@@ -57,6 +57,7 @@
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
+                        <phase>package</phase>
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
