--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -66,7 +66,7 @@
                         <id>default-compile</id>
                         <configuration>
                             <compilerArgs>
-                                <arg>-Xlint:all,-options</arg>
+                                <arg>-Xlint:all,-options,-requires-automatic,-restricted</arg>
                                 <arg>-Werror</arg>
                             </compilerArgs>
                         </configuration>
