--- a/console-ui/pom.xml
+++ b/console-ui/pom.xml
@@ -30,6 +30,7 @@
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
+                        <phase>package</phase>
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib</outputDirectory>
                         </configuration>
