--- a/reader/pom.xml
+++ b/reader/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <automatic.module.name>org.jline.reader</automatic.module.name>
-        <surefire.argLine>--add-opens java.base/java.io=ALL-UNNAMED</surefire.argLine>
+        <surefire.argLine>--add-opens java.base/java.io=org.jline.reader</surefire.argLine>
     </properties>
 
     <dependencies>
