--- a/terminal-ffm/pom.xml
+++ b/terminal-ffm/pom.xml
@@ -57,7 +57,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
+                    <argLine>--enable-native-access=org.jline.terminal.ffm</argLine>
                 </configuration>
             </plugin>
             <plugin>
