Demo: add Snake as a demo (./build demo snake) and enhance visuals/options
- Wire Snake demo to build script and add SnakeDemo main class
- Add options menu (m) with color mode, walls mode, difficulty, wrap-around
- Add rainbow tail coloring and sparkle effect on eating
- Add walls (border/random/none) and wrap-around toggle
- Keep defaults compatible; formatting via Spotless; full build passes

--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>jline-reader</artifactId>
         </dependency>
         <dependency>
+            <artifactId>jline-terminal</artifactId>
+        </dependency>
+
+        <dependency>
             <artifactId>jline-style</artifactId>
         </dependency>
 
