--- a/console-ui/pom.xml
+++ b/console-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.30.5</version>
+        <version>3.30.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-console-ui</artifactId>
