--- a/jansi-core/pom.xml
+++ b/jansi-core/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.30.5</version>
+        <version>3.30.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>jansi-core</artifactId>
