[maven-release-plugin] prepare release jline-3.30.6

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
     <groupId>org.jline</groupId>
     <artifactId>jline-parent</artifactId>
-    <version>3.30.6-SNAPSHOT</version>
+    <version>3.30.6</version>
     <packaging>pom</packaging>
     <name>JLine</name>
     <description>JLine</description>
@@ -74,7 +74,7 @@
     <scm>
         <connection>scm:git:https://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:https://github.com/jline/jline3.git</developerConnection>
-        <tag>jline-3.30.5</tag>
+        <tag>jline-3.30.6</tag>
         <url>http://github.com/jline/jline3</url>
     </scm>
 
@@ -98,7 +98,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.build.outputTimestamp>2025-09-09T12:26:18Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2025-09-10T11:05:45Z</project.build.outputTimestamp>
 
         <java.build.version>22</java.build.version>
         <java.release.version>8</java.release.version>
