Upgrade to mvx 0.9.0

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -22,18 +22,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
-      - name: Setup Node
-        uses: actions/setup-node@v5
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: website/package-lock.json
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           enablement: true
       - name: Build website
-        run: ./build website
+        run: ./mvx website-build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
