Fix backport PR title template
Use double curly braces for template variables so they are properly
expanded by the backport tool.

--- a/.backportrc.json
+++ b/.backportrc.json
@@ -11,7 +11,7 @@
   "branchLabelMapping": {
     "^backport-to-3.x$": "jline-3.x"
   },
-  "prTitle": "[{targetBranch}] {commitMessages}",
+  "prTitle": "[{{targetBranch}}] {{commitMessages}}",
   "autoAssign": true,
   "autoMerge": false,
   "autoMergeMethod": "squash",
