Fix compilation error with -Werror flag
Suppress automatic module warnings by adding -requires-automatic and
-requires-transitive-automatic to the -Xlint exclusion list. This
prevents compilation failures when using automatic modules (JARs
without module-info.java) with the -Werror flag enabled.

Automatic modules are JARs that don't have a module-info.java file.
When compiling with -Werror, the compiler treats warnings about
requires clauses referencing automatic modules as errors, causing
the build to fail. This change suppresses these specific warnings
while keeping all other warnings as errors.

--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,7 @@
                         <showWarnings>true</showWarnings>
                         <release>${java.release.version}</release>
                         <compilerArgs>
-                            <arg>-Xlint:all,-options,-processing,-restricted</arg>
+                            <arg>-Xlint:all,-options,-processing,-restricted,-requires-automatic,-requires-transitive-automatic</arg>
                             <arg>-Werror</arg>
                         </compilerArgs>
                         <fork>true</fork>
