fix: Use standard Java SPI for terminal providers (#1523)
Replace custom service provider loading mechanism with a dual-purpose
approach to fix compatibility with jlink and module tools while avoiding
runtime inefficiencies.

Changes:
- Create standard META-INF/services/org.jline.terminal.spi.TerminalProvider
  files for jlink and JPMS module tools (build-time only)
- Add META-INF/jline/providers/{name} files for efficient runtime loading
- Update TerminalProvider.load() to use on-demand loading instead of
  ServiceLoader to avoid instantiating all providers
- Remove old custom META-INF/services/org/jline/terminal/provider/* files
- Add comprehensive documentation about the dual-purpose approach
- Remove unused Properties import

The old custom loading used slash-separated paths (org/jline/terminal/provider/ffm)
and Properties format which conflicts with JPMS and causes errors with
badass-jlink-plugin and other module tools.

The new approach maintains standard Java SPI files (META-INF/services/) for
jlink/JPMS discovery, but uses provider-specific files (META-INF/jline/providers/)
at runtime. This allows loading providers by name without instantiating all
providers, which is critical for providers that may fail to initialize due to
missing native libraries (JNI, FFM).

Fixes #1523

--- a/terminal-ffm/src/main/resources/META-INF/native-image/org.jline/jline-terminal-ffm/resource-config.json
+++ b/terminal-ffm/src/main/resources/META-INF/native-image/org.jline/jline-terminal-ffm/resource-config.json
@@ -1,5 +1,6 @@
 {
   "resources": [
-    {"pattern": "META-INF/services/org/jline/terminal/provider/.*"}
+    {"pattern": "META-INF/services/org.jline.terminal.spi.TerminalProvider"},
+    {"pattern": "META-INF/jline/providers/ffm"}
   ]
 }
