--- a/terminal/src/main/resources/META-INF/native-image/org.jline/jline-terminal/resource-config.json
+++ b/terminal/src/main/resources/META-INF/native-image/org.jline/jline-terminal/resource-config.json
@@ -1,6 +1,7 @@
 {
   "resources": [
     {"pattern": "org/jline/utils/.*"},
-    {"pattern": "META-INF/services/org/jline/terminal/provider/.*"}
+    {"pattern": "META-INF/services/org.jline.terminal.spi.TerminalProvider"},
+    {"pattern": "META-INF/jline/providers/.*"}
   ]
 }
