feat: add jline-shell module with extensible shell foundations
Introduce the jline-shell module providing a clean, modern API for
building interactive command-line applications on top of jline-reader.

Core API:
- Command, AbstractCommand — command abstraction with name, aliases,
  description, execution, and completion
- CommandGroup, SimpleCommandGroup — command organization and discovery
- CommandDispatcher, DefaultCommandDispatcher — command resolution,
  pipeline execution, and tab completion
- Shell and Shell.builder() — thin REPL loop with fluent builder API
- CommandSession — execution context with terminal, streams, variables,
  working directory, and exit code tracking

Pipeline support:
- Pipeline and PipelineBuilder — type-safe pipeline construction
- PipelineParser — extensible parser for |, |;, &&, ||, ;, >, >>, &
- Custom operator registration via constructor or subclass override
- Exit-code-based conditional execution for && and ||

Job control:
- JobManager and Job — foreground, background, and suspended jobs
- Built-in jobs/fg/bg commands via JobCommands

Alias system:
- AliasManager interface with DefaultAliasManager implementation
- $1/$2/$@ parameter substitution with recursion guard
- Optional file persistence
- Built-in alias/unalias commands

Built-in command groups (opt-in via builder):
- HistoryCommands — list, search, clear, save history
- HelpCommands — list commands by group, detailed per-command help
- OptionCommands — setopt/unsetopt/setvar for runtime configuration

Syntax highlighting:
- CommandHighlighter — bold for known commands, red for unknown,
  cyan for pipeline operators, with delegate support

Integration:
- PicocliCommandRegistry — bridge picocli subcommands into shell
- CommandGroupAdapter/CommandRegistryAdapter — bridge adapters between
  new shell API and legacy console CommandRegistry
- ShellWidgets — TailTipWidgets integration for command descriptions

Documentation:
- Website docs for shell getting started, features, 

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
         <findbugs.version>3.0.2</findbugs.version>
         <groovy.version>5.0.4</groovy.version>
         <ivy.version>2.5.3</ivy.version>
+        <picocli.version>4.7.7</picocli.version>
         <graal.version>25.0.2</graal.version>
         <graal.plugin.version>21.2.0</graal.plugin.version>
         <palantir.version>2.87.0</palantir.version>
@@ -175,6 +176,12 @@
                 <groupId>org.graalvm.sdk</groupId>
                 <artifactId>graal-sdk</artifactId>
                 <version>${graal.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>info.picocli</groupId>
+                <artifactId>picocli</artifactId>
+                <version>${picocli.version}</version>
             </dependency>
 
             <dependency>
@@ -644,10 +651,12 @@
         <subproject>terminal-ffm</subproject>
         <subproject>terminal-jni</subproject>
         <subproject>reader</subproject>
+        <subproject>shell</subproject>
         <subproject>builtins</subproject>
         <subproject>console-ui</subproject>
         <subproject>prompt</subproject>
         <subproject>console</subproject>
+        <subproject>picocli</subproject>
         <subproject>groovy</subproject>
         <subproject>remote-ssh</subproject>
         <subproject>remote-telnet</subproject>
