--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -39,6 +39,9 @@
             <artifactId>jline-console</artifactId>
         </dependency>
         <dependency>
+            <artifactId>jline-shell</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline-console-ui</artifactId>
         </dependency>
@@ -133,6 +136,10 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
+        </dependency>
+
+        <dependency>
+            <artifactId>jline-picocli</artifactId>
         </dependency>
 
         <!-- Picocli for command-line parsing examples -->
@@ -241,7 +248,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <compilerArgs>
-                        <arg>-Xlint:all,-options,-processing,-restricted,-removal,-classfile</arg>
+                        <arg>-Xlint:all,-options,-processing,-restricted,-removal,-classfile,-deprecation</arg>
                         <arg>-Werror</arg>
                     </compilerArgs>
                 </configuration>
