feat: Add jline-components module for composable UI components
New lightweight module providing Ink-inspired composable output
components with flexbox layout and animation support, built on
JLine's Display + AttributedString infrastructure.

Components:
- Box: flexbox container with SINGLE/DOUBLE/ROUNDED borders
- Text: styled text with word wrapping and alignment
- Spinner: animated loading indicator with 25+ frame sets
- ProgressBar: determinate progress with true-color gradient fills
- IndeterminateProgressBar: animated glow sweep bar
- Gradient: gradient-colored text with shimmer animation
- StatusMessage: colored status with icons (success/warning/error/info)
- Separator: horizontal line with optional centered title
- Hyperlink: styled text with URL metadata

Infrastructure:
- Canvas abstraction (char[] + long[] grid, sub-regions)
- ComponentRenderer managing Display, animations, and resize
- LayoutEngine with FlexDirection, FlexAlign, FlexJustify, Insets
- AnimationTimer with daemon thread, dirty tracking, 60fps support
- Components convenience factory classes

Also includes demo (ComponentsExample), website documentation,
and 99 unit tests across 9 test files.

--- a/pom.xml
+++ b/pom.xml
@@ -662,6 +662,7 @@
         <subproject>remote-telnet</subproject>
         <subproject>style</subproject>
         <subproject>curses</subproject>
+        <subproject>components</subproject>
         <subproject>demo</subproject>
         <subproject>graal</subproject>
         <subproject>jansi-core</subproject>
