--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -27,6 +27,11 @@
         <dependency>
             <artifactId>jline-style</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-shell</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>com.googlecode.juniversalchardet</groupId>
@@ -66,7 +71,7 @@
                         <id>default-compile</id>
                         <configuration>
                             <compilerArgs>
-                                <arg>-Xlint:all,-options,-requires-automatic,-restricted</arg>
+                                <arg>-Xlint:all,-options,-requires-automatic,-restricted,-exports</arg>
                                 <arg>-Werror</arg>
                             </compilerArgs>
                         </configuration>
