--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <packaging>pom</packaging>
     <name>JLine</name>
     <description>JLine</description>
-    <url>https://github.com/jline/jline3</url>
+    <url child.project.url.inherit.append.path="false">https://github.com/jline/jline3</url>
 
     <licenses>
         <license>
@@ -48,11 +48,11 @@
         </mailingList>
     </mailingLists>
 
-    <scm>
+    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
         <connection>scm:git:https://github.com/jline/jline3.git</connection>
         <developerConnection>scm:git:https://github.com/jline/jline3.git</developerConnection>
         <tag>${nisse.jgit.dynamicVersion}</tag>
-        <url>http://github.com/jline/jline3</url>
+        <url>https://github.com/jline/jline3</url>
     </scm>
 
     <issueManagement>
